--- a/package.json
+++ b/package.json
@@ -7,5 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Fermín Ares <fermin@ares.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "homepage": "https://github.com/ferares/gulp-remove-sourcemaps#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ferares/gulp-remove-sourcemaps.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ferares/gulp-remove-sourcemaps/issues"
+  },
+  "keywords": [
+    "gulpplugin"
+  ],
 }
